Touch up on v2.2.0

--- a/paisr.yaml
+++ b/paisr.yaml
@@ -4214,7 +4214,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorResponse"
 
-  /audits/logs:
+  /logs:
     get:
       tags:
         - Logs
