--- a/paisr.yaml
+++ b/paisr.yaml
@@ -30,6 +30,8 @@ servers:
 security:
   - bearerAuth: []
 tags:
+  - name: Business
+    description: Business only resource.
   - name: Tokens
     description: Create, manage, and revoke profile access tokens securely.
   - name: Webhooks
@@ -2286,8 +2288,9 @@ paths:
     get:
       tags:
         - Customers
+        - Business
       summary: Get Customers
-      description: Fetch a list of customers. (Business Only)
+      description: Fetch a list of customers.
       responses:
         "200":
           description: Successfully retrieved the list of customers.
@@ -2321,8 +2324,9 @@ paths:
     post:
       tags:
         - Customers
+        - Business
       summary: Add Customer
-      description: Add a new customer. (Business Only)
+      description: Add a new customer.
       requestBody:
         description: The details required to create a customer.
         required: true
@@ -2353,8 +2357,9 @@ paths:
     get:
       tags:
         - Customers
+        - Business
       summary: Get Customer
-      description: Fetch customer information. (Business Only)
+      description: Fetch customer information.
       parameters:
         - name: customer_id
           in: path
@@ -2391,8 +2396,9 @@ paths:
     put:
       tags:
         - Customers
+        - Business
       summary: Update Customer
-      description: Modify customer information. (Business Only)
+      description: Modify customer information.
       parameters:
         - name: customer_id
           in: path
@@ -2430,8 +2436,9 @@ paths:
     patch:
       tags:
         - Customers
+        - Business
       summary: Restore Customer
-      description: Restore an archived customer. (Business Only)
+      description: Restore an archived customer.
       parameters:
         - name: customer_id
           in: path
@@ -2462,8 +2469,9 @@ paths:
     delete:
       tags:
         - Customers
+        - Business
       summary: Remove Customer
-      description: Permanently remove / archive a customer. (Business Only)
+      description: Permanently remove / archive a customer.
       parameters:
         - name: customer_id
           in: path
@@ -2496,8 +2504,9 @@ paths:
     get:
       tags:
         - Vouchers
+        - Business
       summary: Get Vouchers
-      description: Fetch a list of vouchers. (Business Only)
+      description: Fetch a list of vouchers.
       responses:
         "200":
           description: Successfully retrieved the list of vouchers.
@@ -2531,6 +2540,7 @@ paths:
     post:
       tags:
         - Vouchers
+        - Business
       summary: Create Voucher
       description: Create a new voucher.
       requestBody:
@@ -2563,8 +2573,9 @@ paths:
     post:
       tags:
         - Vouchers
+        - Business
       summary: Apply Voucher
-      description: Apply a voucher to an eligible invoice. (Business Only)
+      description: Apply a voucher to an eligible invoice.
       requestBody:
         description: The details required to apply a voucher to an invoice.
         required: true
@@ -2595,8 +2606,9 @@ paths:
     get:
       tags:
         - Vouchers
+        - Business
       summary: Get Voucher
-      description: Fetch voucher information. (Business Only)
+      description: Fetch voucher information.
       parameters:
         - name: voucher_id
           in: path
@@ -2633,8 +2645,9 @@ paths:
     put:
       tags:
         - Vouchers
+        - Business
       summary: Update Voucher
-      description: Modify voucher information. (Business Only)
+      description: Modify voucher information.
       parameters:
         - name: voucher_id
           in: path
@@ -2672,8 +2685,9 @@ paths:
     delete:
       tags:
         - Vouchers
+        - Business
       summary: Remove Voucher
-      description: Permanently delete a voucher. (Business Only)
+      description: Permanently delete a voucher.
       parameters:
         - name: voucher_id
           in: path
@@ -2706,8 +2720,9 @@ paths:
     get:
       tags:
         - Plans
+        - Business
       summary: Get Plans
-      description: Fetch a list of plans. (Business Only)
+      description: Fetch a list of plans.
       parameters:
         - name: type
           in: query
@@ -2772,6 +2787,7 @@ paths:
     post:
       tags:
         - Plans
+        - Business
       summary: Create Plan
       description: Create a new plan.
       requestBody:
@@ -2804,8 +2820,9 @@ paths:
     get:
       tags:
         - Plans
+        - Business
       summary: Get Plan
-      description: Fetch plan information. (Business Only)
+      description: Fetch plan information.
       parameters:
         - name: plan_id
           in: path
@@ -2848,8 +2865,9 @@ paths:
     put:
       tags:
         - Plans
+        - Business
       summary: Update Plan
-      description: Modify plan information. (Business Only)
+      description: Modify plan information.
       parameters:
         - name: plan_id
           in: path
@@ -2887,8 +2905,9 @@ paths:
     delete:
       tags:
         - Plans
+        - Business
       summary: Remove Plan
-      description: Permanently delete a plan. (Business Only)
+      description: Permanently delete a plan.
       parameters:
         - name: plan_id
           in: path
@@ -2921,6 +2940,7 @@ paths:
     post:
       tags:
         - Plans
+        - Business
       summary: Add Price Option
       description: Add a new price option to a plan.
       parameters:
@@ -2961,6 +2981,7 @@ paths:
     put:
       tags:
         - Plans
+        - Business
       summary: Update Price Option
       description: Modify price option information.
       parameters:
@@ -3007,6 +3028,7 @@ paths:
     patch:
       tags:
         - Plans
+        - Business
       summary: Modify Price Option
       description: Activate or deactivate a price option.
       parameters:
@@ -3046,6 +3068,7 @@ paths:
     delete:
       tags:
         - Plans
+        - Business
       summary: Remove Price Option
       description: Remove a price option from a plan.
       parameters:
@@ -3087,8 +3110,9 @@ paths:
     get:
       tags:
         - Invoices
+        - Business
       summary: Get Invoices
-      description: Fetch a list of invoices. (Business Only)
+      description: Fetch a list of invoices.
       parameters:
         - name: resource_id
           in: query
@@ -3150,8 +3174,9 @@ paths:
     post:
       tags:
         - Invoices
+        - Business
       summary: Create Invoice
-      description: Create a new invoice. (Business Only)
+      description: Create a new invoice.
       requestBody:
         description: The details required to create an invoice.
         required: true
@@ -3182,8 +3207,9 @@ paths:
     get:
       tags:
         - Invoices
+        - Business
       summary: Get Invoice
-      description: Fetch invoice information. (Business Only)
+      description: Fetch invoice information.
       parameters:
         - name: invoice_id
           in: path
@@ -3220,8 +3246,9 @@ paths:
     put:
       tags:
         - Invoices
+        - Business
       summary: Update Invoice
-      description: Update invoice information. (Business Only)
+      description: Update invoice information.
       parameters:
         - name: invoice_id
           in: path
@@ -3259,8 +3286,9 @@ paths:
     delete:
       tags:
         - Invoices
+        - Business
       summary: Remove Invoice
-      description: Permanently delete an invoice. (Business Only)
+      description: Permanently delete an invoice.
       parameters:
         - name: invoice_id
           in: path
@@ -3292,6 +3320,7 @@ paths:
     post:
       tags:
         - Invoices
+        - Business
       summary: Send Invoice
       description: Send an e-invoice to the customer's email.
       parameters:
@@ -3326,6 +3355,7 @@ paths:
     post:
       tags:
         - Invoices
+        - Business
       summary: Add Line Items
       description: Add new line items to an invoice.
       parameters:
@@ -3366,6 +3396,7 @@ paths:
     put:
       tags:
         - Invoices
+        - Business
       summary: Update Line Item
       description: Modify line item information.
       parameters:
@@ -3412,6 +3443,7 @@ paths:
     delete:
       tags:
         - Invoices
+        - Business
       summary: Remove Line Item
       description: Remove a line item from an invoice.
       parameters:
@@ -3453,8 +3485,9 @@ paths:
     get:
       tags:
         - Subscriptions
+        - Business
       summary: Get Subscriptions
-      description: Fetch a list of subscriptions. (Business Only)
+      description: Fetch a list of subscriptions.
       parameters:
         - name: resource_id
           in: query
@@ -3516,8 +3549,9 @@ paths:
     post:
       tags:
         - Subscriptions
+        - Business
       summary: Create Subscription
-      description: Create a new subscription. (Business Only)
+      description: Create a new subscription.
       requestBody:
         description: The details required to create a subscription.
         required: true
@@ -3548,8 +3582,9 @@ paths:
     get:
       tags:
         - Subscriptions
+        - Business
       summary: Get Subscription
-      description: Fetch subscription information. (Business Only)
+      description: Fetch subscription information.
       parameters:
         - name: subscription_id
           in: path
@@ -3586,8 +3621,9 @@ paths:
     patch:
       tags:
         - Subscriptions
+        - Business
       summary: Update Subscription
-      description: Enable or Disable subscription auto renewal. (Business Only)
+      description: Enable or Disable subscription auto renewal.
       parameters:
         - name: subscription_id
           in: path
@@ -3618,8 +3654,9 @@ paths:
     delete:
       tags:
         - Subscriptions
+        - Business
       summary: Remove Subscription
-      description: Permanently delete a subscription. (Business Only)
+      description: Permanently delete a subscription.
       parameters:
         - name: subscription_id
           in: path
@@ -3651,8 +3688,9 @@ paths:
     post:
       tags:
         - Subscriptions
+        - Business
       summary: Restore Subscription
-      description: Restore a subscription that's in a `requires-action` state. (Business Only)
+      description: Restore a subscription that's in a `requires-action` state.
       parameters:
         - name: subscription_id
           in: path
@@ -3684,8 +3722,9 @@ paths:
     post:
       tags:
         - Subscriptions
+        - Business
       summary: Cancel Subscription
-      description: Cancel a subscription that's in a `active` or `trial` state. (Business Only)
+      description: Cancel a subscription that's in a `active` or `trial` state.
       parameters:
         - name: subscription_id
           in: path
@@ -3718,8 +3757,9 @@ paths:
     get:
       tags:
         - Payments
+        - Business
       summary: Get Payments
-      description: Fetch a list payments. (Business Only)
+      description: Fetch a list payments.
       parameters:
         - name: resource_id
           in: query
@@ -3788,6 +3828,7 @@ paths:
     post:
       tags:
         - Payments
+        - Business
       summary: Initiate Payment
       description: Start a payment operation.
       parameters:
@@ -3841,6 +3882,7 @@ paths:
     get:
       tags:
         - Payments
+        - Business
       summary: Get Payment
       description: Fetch payment information.
       parameters:
@@ -3880,6 +3922,7 @@ paths:
     post:
       tags:
         - Payments
+        - Business
       summary: Refund Payment
       description: Refund an approved payment.
       parameters:
@@ -3921,8 +3964,9 @@ paths:
     get:
       tags:
         - Provider Connections
+        - Business
       summary: Get Provider Connections
-      description: Fetch a list of connected providers. (Business Only)
+      description: Fetch a list of connected providers.
       responses:
         "200":
           description: Successfully retrieved the list of providers.
@@ -3956,8 +4000,9 @@ paths:
     post:
       tags:
         - Provider Connections
+        - Business
       summary: Connect Provider
-      description: Connect a new provider. (Business Only)
+      description: Connect a new provider.
       requestBody:
         description: The details required to connect a provider.
         required: true
@@ -3988,8 +4033,9 @@ paths:
     put:
       tags:
         - Provider Connections
+        - Business
       summary: Update Provider Connection
-      description: Update connection API credentials. (Business Only)
+      description: Update connection API credentials.
       parameters:
         - name: connection_id
           in: path
@@ -4027,8 +4073,9 @@ paths:
     patch:
       tags:
         - Provider Connections
+        - Business
       summary: Modify Provider Connection
-      description: Enable or disable a provider connection. (Business Only)
+      description: Enable or disable a provider connection.
       parameters:
         - name: connection_id
           in: path
@@ -4059,8 +4106,9 @@ paths:
     delete:
       tags:
         - Provider Connections
+        - Business
       summary: Remove Provider Connection
-      description: Permanently disconnect a provider. (Business Only)
+      description: Permanently disconnect a provider.
       parameters:
         - name: connection_id
           in: path
@@ -4093,8 +4141,9 @@ paths:
     get:
       tags:
         - Analytics
+        - Business
       summary: Get Invoice Metrics
-      description: Fetch invoice metrics. (Business Only)
+      description: Fetch invoice metrics.
       responses:
         "200":
           description: Successfully retrieved invoice metrics.
@@ -4124,8 +4173,9 @@ paths:
     get:
       tags:
         - Analytics
+        - Business
       summary: Get Subscription Metrics
-      description: Fetch subscription metrics. (Business Only)
+      description: Fetch subscription metrics.
       responses:
         "200":
           description: Successfully retrieved subscription metrics.
@@ -4155,8 +4205,9 @@ paths:
     get:
       tags:
         - Analytics
+        - Business
       summary: Get Payment Metrics
-      description: Fetch payment metrics. (Business Only)
+      description: Fetch payment metrics.
       responses:
         "200":
           description: Successfully retrieved payment metrics.
@@ -4186,8 +4237,9 @@ paths:
     get:
       tags:
         - Analytics
+        - Business
       summary: Get Customer Metrics
-      description: Fetch the customer metrics. (Business Only)
+      description: Fetch the customer metrics.
       responses:
         "200":
           description: Successfully retrieved customer metrics.
